tests/error/match_errors/bad_pattern3.err
Error: Expected a struct or enum class (at $FILE:13:13)
   | 
11 | def main(i: Enum) -> None:
12 |     match i:
13 |         case Enum.f.m():
   |              ^^^^^^^^^^ Expected a struct or enum class, got a function call

Guppy compilation failed due to 1 previous error
